# TSAD-data-generator

./: .gitignore  README.md  pyproject.toml
apps/tsad_studio/: README.md  server.py  studio_core.py
apps/tsad_studio/static/: app.js  index.html  styles.css
configs/: default.json  default.yaml
scripts/: check_quality.ps1  generate_dataset.py  setup_env.ps1
src/synthtsad/: __init__.py  config.py  interfaces.py  pipeline.py  utils.py
src/synthtsad/anomaly/: local.py  seasonal.py
src/synthtsad/causal/: arx.py  dag.py
src/synthtsad/components/: noise.py  seasonality.py  trend.py
src/synthtsad/io/: writer.py
src/synthtsad/labeling/: labeler.py
tests/: test_anomaly_labels.py  test_config_validation.py  test_dag.py  test_debug_switches.py  test_extended_anomalies.py  test_labeler.py  test_num_series.py  test_seasonality_console.py  test_smoke.py  test_stage1_stage2_console.py  test_studio_metadata.py  test_trend_console.py  test_trend_flow.py  test_trend_seasonality_console.py  test_trend_seasonality_noise_console.py
